<resources>
	<string name="app_name">The service ticket pro</string>
	<string name="button_log_in">Log In</string>
	<string name="button_sign_up">Sign Up</string>
	<string name="text_login">Login</string>
	<string name="text_password">Password</string>
	<string name="your_login">Your login:</string>
	<string name="your_password">Your password:</string>
	<string name="getback">Back</string>
</resources>
