<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/log_in_background"
	tools:context=".LogInActivity">

	<Button
		android:id="@+id/buttonSignUp"
		android:layout_width="200dp"
		android:layout_height="100dp"
		android:layout_marginBottom="10dp"
		android:fontFamily="serif"
		android:text="@string/button_sign_up"
		android:textSize="30sp"
		app:layout_constraintBottom_toTopOf="@+id/buttonLogIn"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/buttonLogIn"
		android:layout_width="200dp"
		android:layout_height="100dp"
		android:layout_marginBottom="50dp"
		android:fontFamily="serif"
		android:text="@string/button_log_in"
		android:textSize="30sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

	<EditText
		android:id="@+id/textLogin"
		android:layout_width="@dimen/text_attributes_width"
		android:layout_height="@dimen/text_attributes_height"
		android:layout_marginTop="150dp"
		android:autofillHints="@string/text_login"
		android:background="@color/colorWhite85"
		android:fontFamily="monospace"
		android:hint="@string/text_login"
		android:inputType="textPersonName"
		android:paddingLeft="@dimen/text_attributes_height"
		android:paddingRight="@dimen/text_attributes_height"
		android:textSize="30sp"
		android:textStyle="italic"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<EditText
		android:id="@+id/textPassword"
		android:layout_width="@dimen/text_attributes_width"
		android:layout_height="@dimen/text_attributes_height"
		android:layout_marginTop="10dp"
		android:autofillHints="@string/text_password"
		android:background="@color/colorWhite85"
		android:fontFamily="monospace"
		android:hint="@string/text_password"
		android:inputType="textPassword"
		android:paddingLeft="@dimen/text_attributes_height"
		android:paddingRight="@dimen/text_attributes_height"
		android:textSize="30sp"
		android:textStyle="italic"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textLogin" />

	<ImageView
		android:id="@+id/imagePassword"
		android:layout_width="@dimen/icon_length"
		android:layout_height="@dimen/icon_length"
		android:layout_marginStart="20.57142857145dp"
		android:layout_marginTop="262.60000000003dp"
		android:contentDescription="@string/text_password"
		android:src="@drawable/password_icon"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<ImageView
		android:id="@+id/imageLogin"
		android:layout_width="@dimen/icon_length"
		android:layout_height="@dimen/icon_length"
		android:layout_marginStart="20.57142857145dp"
		android:layout_marginTop="170.57142857145dp"
		android:contentDescription="@string/text_login"
		android:src="@drawable/login_icon"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>