<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/text_passwordData"
		android:layout_width="256dp"
		android:layout_height="48dp"
		android:layout_marginStart="50dp"
		android:layout_marginTop="10dp"
		android:fontFamily="monospace"
		android:textColor="#000000"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textPasswordView" />

	<TextView
		android:id="@+id/textPasswordView"
		android:layout_width="256dp"
		android:layout_height="48dp"
		android:layout_marginStart="50dp"
		android:layout_marginTop="10dp"
		android:fontFamily="monospace"
		android:text="@string/your_password"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/text_loginData" />

	<TextView
		android:id="@+id/text_loginData"
		android:layout_width="256dp"
		android:layout_height="48dp"
		android:layout_marginStart="50dp"
		android:layout_marginTop="10dp"
		android:fontFamily="monospace"
		android:textColor="#000000"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/textLoginView" />

	<TextView
		android:id="@+id/textLoginView"
		android:layout_width="256dp"
		android:layout_height="48dp"
		android:layout_marginStart="50dp"
		android:layout_marginTop="50dp"
		android:fontFamily="monospace"
		android:text="@string/your_login"
		android:textSize="30sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<Button
		android:id="@+id/buttonBack"
		android:layout_width="128dp"
		android:layout_height="64dp"
		android:layout_marginBottom="50dp"
		android:fontFamily="monospace"
		android:text="@string/getback"
		android:textSize="30sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>